argocd/clusters/managed-clusters/ai-test/live/amq-iot-workload/amq-broker-instance.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-edge-pkg-ctr
  annotations:
    argocd.argoproj.io/sync-wave: "0"
