argocd/clusters/managed-clusters/ai-test/live/amq-iot-workload/iot-sim-workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-edge-pkg-ctr
  annotations:
    argocd.argoproj.io/sync-wave: "0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-edge-pkg-ctr
  name: iot-simulator
  annotations:
    argocd.argoproj.io/sync-wave: "3"  
spec:
  selector:
    matchLabels:
      app: mqtt-producer
  replicas: 1
  template:
    metadata:
      labels:
        app: mqtt-producer
    spec:
      containers:
        - name: container
          image: quay.io/naveenkendyala/camel-sboot-rest-amq:7.12.0
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%

---
apiVersion: v1
kind: Service
metadata:
  name: iot-simulator-svc
  namespace: demo-edge-pkg-ctr
  annotations:
    argocd.argoproj.io/sync-wave: "4"  
spec:
  selector:
    app: mqtt-producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: iot-simulator-rt
  namespace: demo-edge-pkg-ctr
  annotations:
    argocd.argoproj.io/sync-wave: "5"  
spec:
  to:
    kind: Service
    name: iot-simulator-svc
  port:
    targetPort: 8080
